Inclusão de teste unitários para o AddressService